--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,64 +10,59 @@
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="./assets/css/styles.css" />
 
-    <title>Responsive login form</title>
+    <title>Formulario de Inicio de Sesión</title>
   </head>
   <body>
     <div class="container">
       <div class="login">
         <div class="login__content">
-          <img class="login__img" src="./assets/img/bg-login.png" alt="Login image" />
-
-          <form class="login__form">
+          <img class="login__img" src="/assets/img/Logoo.webp" />
+          
+          <form class="login__form" id="login-form">
             <div>
               <h1 class="login__title">
-                <span>Welcome</span> Back
+                <span>SISTEMA INTEGRAL</span> "CFE"
               </h1>
-
               <p class="login__description">
-                Welcome! Please login to continue.
+                Por favor, Identifícate!
               </p>
             </div>
 
-            <div>
-              <div class="login__inputs">
-                <div>
-                  <label for="email" class="login__label">Email</label>
-                  <input class="login__input" type="email" id="email" placeholder="Enter your email address" required />
-                </div>
-
-                <div>
-                  <label for="password" class="login__label">Password</label>
-                  <div class="login__box">
-                    <input class="login__input" type="password" id="password" placeholder="Enter your password" required />
-                    <i class="ri-eye-off-line login__eye" id="input-icon"></i>
-                  </div>
-                </div>
+            <div class="login__inputs">
+              <div>
+                <label for="email" class="login__label">Usuario</label>
+                <input class="login__input" type="email" id="email" placeholder="Ingresa tu usuario" required />
               </div>
 
-              <div class="login__check">
-                <label class="login__check-label" for="check">
-                  <input class="login__check-input" type="checkbox" id="check" />
-                  <i class="ri-check-line login__check-icon"></i>
-                  Remember me
-                </label>
+              <div>
+                <label for="password" class="login__label">Contraseña</label>
+                <div class="login__box">
+                  <input class="login__input" type="password" id="password" placeholder="Ingresa la contraseña" required />
+                  <i class="ri-eye-off-line login__eye" id="input-icon"></i>
+                </div>
               </div>
             </div>
 
-            <div>
-              <div class="login__buttons">
-                <button class="login__button">Log In</button>
-                <button class="login__button login__button-ghost">Sign Up</button>
-              </div>
-
-              <a class="login__forgot" href="#">Forgot Password?</a>
+            <div class="login__check">
+              <label class="login__check-label" for="check">
+                <input class="login__check-input" type="checkbox" id="check" />
+                <i class="ri-check-line login__check-icon"></i>
+                Guardar Datos
+              </label>
             </div>
+
+            <div class="login__buttons">
+              <button class="login__button" type="submit">Ingresar</button>
+              <button class="login__button login__button-ghost" type="button">Registrar</button>
+            </div>
+
+            <a class="login__forgot" href="#">Olvidé la Contraseña</a>
           </form>
         </div>
       </div>
     </div>
 
-  <!--=============== MAIN JS ===============-->
-  <script src="./assets/js/main.js"></script>
+    <!--=============== MAIN JS ===============-->
+    <script src="/assets/js/main.js"></script>
   </body>
 </html>
